--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+body{
+  background-image: url('background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
 .App {
   text-align: center;
+  background-color: #0000005d;
 }
 
 .App-logo {
