--- a/src/components/Applicants/Applicants.css
+++ b/src/components/Applicants/Applicants.css
@@ -1,3 +1,8 @@
+.dashboard-body{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    margin-right: 10px;
+}
 .applicants-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
