--- a/src/components/Applicant/Applicant.css
+++ b/src/components/Applicant/Applicant.css
@@ -15,11 +15,11 @@
     margin-top: 10px;
     margin-left: 10px;
     border-radius: 5px;
-    background-color: #d8d7d7;
+    background-color: #d8d7d7a4;
     color: rgb(63, 63, 63);
     font-weight: bold;
 }
 .applicant button:hover{
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.596);
     color: white;
 }
