--- a/src/components/Choosed/Choosed.css
+++ b/src/components/Choosed/Choosed.css
@@ -1,10 +1,10 @@
 .budget-consume-amount{
+    position: fixed;
+    margin-left: 15px;
     color: white;
     border: 2px solid gray;
     border-radius: 10px;
-    margin-top: 10px;
-    padding: 40px;
-    position: fixed;
+    padding: 10px 18px;
     background-color: rgba(0, 128, 128, 0.205);
 }
 .confirm-hire-btn{
@@ -17,4 +17,7 @@
 }
 .confirm-hire-btn:hover{
     background-color: rgba(112, 128, 144, 0.534);
+}
+li{
+    list-style: none;
 }
