--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
 }
 .header nav{
     text-align: right;
-    margin-top: 10px;
+    margin-top: 5px;
     margin-bottom: 10px;
     margin-right: 40px;
 }
@@ -24,8 +24,8 @@
     color: crimson;
 }
 .header h1{
-    font-size: 45px;
+    font-size: 40px;
 }
-.header h3{
+.header p{
     font-size: 16px;
 }
